# SoundScout

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  SoundScout-template.xml  docker-compose.yml  pyproject.toml  run_pipeline.py
.github/workflows/: docker-publish.yml
scraper/: app.go  go.mod  go.sum  main.go
scraper/backend/: acoustid.go  amazon.go  app_dir.go  cover.go  download_validation.go  ffmpeg.go  filemanager.go  isrc_cache.go  isrc_finder.go  link_resolver.go  metadata.go  musicbrainz.go  progress.go  provider_priority.go  qobuz.go  qobuz_api.go  songlink.go  songlink_cache.go  soundplate.go  spotfetch.go  spotify_metadata.go  tidal.go  tidal_api_list.go
src/soundscout/: config.py  import_step.py  job.py  lastfm.py  models.py  organise.py  pipeline.py  plex.py  run.py  spotify.py  webui.py
src/soundscout/static/: app.js  style.css
src/soundscout/templates/: index.html
